--- a/src/components/Map/haewark_hamlet/haewark.scss
+++ b/src/components/Map/haewark_hamlet/haewark.scss
@@ -59,3 +59,58 @@
 		display: block;
 	}
 }
+
+.canyon {
+	top: 80px;
+	left: 23px;
+
+	&-yellow {
+		display: block;
+	}
+}
+
+.barrows {
+	top: 80px;
+	left: 23px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.colosseum {
+	top: 80px;
+	left: 23px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.estuary {
+	top: 80px;
+	left: 23px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.burial_chambers {
+	top: 80px;
+	left: 23px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.iceberg {
+	top: 80px;
+	left: 23px;
+
+	&-red {
+		display: block;
+	}
+}
+
