--- a/src/components/Map/lex_proxima/proxima.scss
+++ b/src/components/Map/lex_proxima/proxima.scss
@@ -149,3 +149,75 @@
 		display: block;
 	}
 }
+
+.underground_river {
+	top: 120px;
+	left: 190px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.tower {
+	top: 120px;
+	left: 190px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.sepulchre {
+	top: 120px;
+	left: 190px;
+
+	&-yellow {
+		display: block;
+	}
+}
+
+.arid_lake {
+	top: 120px;
+	left: 190px;
+
+	&-white {
+		display: block;
+	}
+}
+
+.maze {
+	top: 120px;
+	left: 190px;
+
+	&-yellow {
+		display: block;
+	}
+}
+
+.mineral_pools {
+	top: 120px;
+	left: 190px;
+
+	&-yellow {
+		display: block;
+	}
+}
+
+.siege {
+	top: 120px;
+	left: 190px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.laboratory {
+	top: 120px;
+	left: 190px;
+
+	&-red {
+		display: block;
+	}
+}
