--- a/src/components/Map/tirns_end/tirns.scss
+++ b/src/components/Map/tirns_end/tirns.scss
@@ -77,3 +77,66 @@
 		display: block;
 	}
 }
+
+.wharf {
+	top: 20px;
+	left: 150px;
+
+	&-white {
+		display: block;
+	}
+}
+
+.spider_forest {
+	top: 20px;
+	left: 150px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.relic_chambers {
+	top: 20px;
+	left: 150px;
+
+	&-yellow {
+		display: block;
+	}
+}
+
+.city_square {
+	top: 20px;
+	left: 150px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.atoll {
+	top: 20px;
+	left: 150px;
+
+	&-white {
+		display: block;
+	}
+}
+
+.fungal_hollow {
+	top: 20px;
+	left: 150px;
+
+	&-red {
+		display: block;
+	}
+}
+
+.necropolis {
+	top: 20px;
+	left: 150px;
+
+	&-red {
+		display: block;
+	}
+}
