--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -22,11 +22,13 @@
 	}
 
 	&-name {
+		width: 90px;
 		position: relative;
 		text-align: center;
 		font-size: 0.7em;
 		color: white;
 		top: -2px;
+		left: -15px;
 	}
 
 	&-tier-number {
