--- a/src/components/Map/haewark_hamlet/haewark.scss
+++ b/src/components/Map/haewark_hamlet/haewark.scss
@@ -1,10 +1,14 @@
-.bog {
-	top: -30px;
-	left: 332px;
+// .bog {
+// 	top: -17px;
+// 	left: 418px;
 
-	&-white {
-		display: block;
-	}
+// 	&-white {
+// 		display: block;
+// 	}
+// }
+
+.bog {
+	top: 100px;
 }
 
 .vaal_pyramid {
@@ -113,4 +117,3 @@
 		display: block;
 	}
 }
-
