haewark hamlet finished and unique map fix

--- a/src/components/Map/haewark_hamlet/haewark.scss
+++ b/src/components/Map/haewark_hamlet/haewark.scss
@@ -43,56 +43,32 @@
 	left: 323px;
 }
 
-.canyon {
-	top: 80px;
-	left: 23px;
-
-	&-yellow {
-		display: block;
-	}
+#canyon_map {
+	top: 22px;
+	left: 128px;
 }
 
-.barrows {
-	top: 80px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#barrows_map {
+	top: 20px;
+	left: 184px;
 }
 
-.colosseum {
-	top: 80px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#colosseum_map {
+	top: 17px;
+	left: -28px;
 }
 
-.estuary {
-	top: 80px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#estuary_map {
+	top: 111px;
+	left: -28px;
 }
 
-.burial_chambers {
-	top: 80px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#burial_chambers_map {
+	top: 64px;
+	left: 190px;
 }
 
-.iceberg {
-	top: 80px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#iceberg_map {
+	top: 167px;
+	left: 55px;
 }
