lex_proxima completed

--- a/src/components/Map/lex_proxima/proxima.scss
+++ b/src/components/Map/lex_proxima/proxima.scss
@@ -1,124 +1,134 @@
 #arsenal_map {
-	top: 50px;
-	left: 50px;
+	top: 167px;
+	left: 273px;
 }
 
 #ashen_wood_map {
-	top: 100px;
-	left: 50px;
+	top: 470px;
+	left: 310px;
 }
 
-.bazaar {
-	top: 0px;
-	left: 50px;
+#bazaar_map {
+	top: 55px;
+	left: -25px;
 }
 
-.cemetery {
-	top: 5px;
-	left: 50px;
+#cemetery_map {
+	top: 580px;
+	left: 360px;
 }
 
-.coral_ruins {
+#coral_ruins_map {
+	top: 560px;
+	left: 290px;
+}
+
+#crystal_ore_map {
+	top: 330px;
+	left: 380px;
+}
+
+#dunes_map {
+	top: 207px;
+	left: 348px;
+}
+
+#fields_map {
+	top: 190px;
+	left: 110px;
+}
+
+#glacier_map {
+	top: 275px;
+	left: 110px;
+}
+
+#haunted_mansion_map {
+	top: 460px;
+	left: 210px;
+}
+
+#jungle_valley_map {
+	top: 140px;
+	left: -12px;
+}
+
+#mausoleum_map {
+	top: 360px;
+	left: 245px;
+}
+
+#plateau_map {
+	top: 440px;
+	left: 420px;
+}
+
+#terrace_map {
+	top: 85px;
+	left: 195px;
+}
+
+#underground_sea_map {
+	top: 240px;
+	left: 245px;
+}
+
+#volcano_map {
+	top: 330px;
+	left: 490px;
+}
+
+#underground_river_map {
+	top: 75px;
+	left: 55px;
+}
+
+#tower_map {
+	top: 360px;
+	left: 430px;
+}
+
+#sepulchre_map {
+	top: 110px;
+	left: 85px;
+}
+
+#arid_lake_map {
+	top: 235px;
+	left: 200px;
+}
+
+#maze_map {
+	top: 200px;
+	left: 190px;
+}
+
+#mineral_pools_map {
+	top: 355px;
+	left: 370px;
+}
+
+#siege_map {
 	top: 60px;
-	left: -200px;
+	left: 135px;
 }
 
-.crystal_ore {
-	top: 60px;
-	left: -200px;
-}
-
-.dunes {
-	top: 60px;
-	left: -200px;
-}
-
-.fields {
-	top: 60px;
-	left: -200px;
-}
-
-.glacier {
-	top: 80px;
-	left: 350px;
-}
-
-.haunted_mansion {
-	top: 0px;
-	left: 230px;
-}
-
-.jungle_valley {
-	top: 40px;
-	left: 0px;
-}
-
-.mausoleum {
-	top: 40px;
-	left: 0px;
-}
-
-.plateau {
-	top: 40px;
-	left: 0px;
-}
-
-.terrace {
-	top: 60px;
-	left: 0px;
-}
-
-.underground_sea {
-	top: 120px;
-	left: -180px;
-}
-
-.volcano {
-	top: 120px;
-	left: -180px;
-}
-
-.underground_river {
-	top: 120px;
-	left: 190px;
-}
-
-.tower {
-	top: 120px;
-	left: 190px;
-}
-
-.sepulchre {
-	top: 120px;
-	left: 190px;
-}
-
-.arid_lake {
-	top: 120px;
-	left: 190px;
-}
-
-.maze {
-	top: 120px;
-	left: 190px;
-}
-
-.mineral_pools {
-	top: 120px;
-	left: 190px;
-}
-
-.siege {
-	top: 120px;
-	left: 190px;
-}
-
-.laboratory {
-	top: 120px;
-	left: 190px;
+#laboratory_map {
+	top: 255px;
+	left: 155px;
 }
 
 #caer_blaidd_map {
-	top: 50px;
-	left: 100px;
+	top: 135px;
+	left: 33px;
+}
+
+#pillars_of_arun_map {
+	top: 260px;
+	left: 330px;
+}
+
+#doryanis_machinarium_map {
+	top: 85px;
+	left: 155px;
 }
