--- a/src/components/Map/tirns_end/tirns.scss
+++ b/src/components/Map/tirns_end/tirns.scss
@@ -1,11 +1,11 @@
 #cursed_crypt_map {
-	top: 45px;
-	left: 318px;
+	top: 25px;
+	left: 280px;
 }
 
 #lookout_map {
 	top: 245px;
-	left: 330px;
+	left: 300px;
 }
 
 #museum_map {
@@ -20,7 +20,7 @@
 
 #strand_map {
 	top: 275px;
-	left: 288px;
+	left: 258px;
 }
 
 #summit_map {
@@ -40,7 +40,7 @@
 
 #waterways_map {
 	top: 215px;
-	left: 375px;
+	left: 345px;
 }
 
 #poorjoys_asylum_map {
@@ -80,7 +80,7 @@
 
 #relic_chambers_map {
 	top: 95px;
-	left: 320px;
+	left: 300px;
 }
 
 #spider_forest_map {
@@ -106,4 +106,14 @@
 #death_and_taxes_map {
 	top: 270px;
 	left: 80px;
+}
+
+#hallowed_ground_map {
+	top: 528px;
+	left: 360px;
+}
+
+#obas_cursed_trove_map {
+	top: 300px;
+	left: 240px;
 }
