lex_ejoris finished

--- a/src/components/Map/lex_ejoris/ejoris.scss
+++ b/src/components/Map/lex_ejoris/ejoris.scss
@@ -1,132 +1,79 @@
-.bone_crypt {
-	top: -30px;
-	left: 30px;
-
-	&-white {
-		display: block;
-	}
+#bone_crypt_map {
+	top: 225px;
+	left: 230px;
 }
 
-.dig {
-	top: -30px;
-	left: 30px;
-
-	&-white {
-		display: block;
-	}
+#dig_map {
+	top: 335px;
+	left: 360px;
 }
 
-.excavation {
-	top: -30px;
-	left: 30px;
-	&-white {
-		display: block;
-	}
+#excavation_map {
+	top: 155px;
+	left: 140px;
 }
 
-.grotto {
-	top: -30px;
-	left: 30px;
-
-	&-white {
-		display: block;
-	}
+#grotto_map {
+	top: 165px;
+	left: 210px;
 }
 
-.lair {
-	top: -30px;
-	left: 30px;
-
-	&-white {
-		display: block;
-	}
+#lair_map {
+	top: 80px;
+	left: 130px;
 }
 
-.leyline {
-	top: -30px;
-	left: 110px;
-
-	&-white {
-		display: block;
-	}
+#leyline_map {
+	top: 85px;
+	left: 258px;
 }
 
-.pen {
-	top: -30px;
-	left: 110px;
-
-	&-white {
-		display: block;
-	}
-}
-.port {
-	top: -30px;
-	left: 110px;
-
-	&-white {
-		display: block;
-	}
+#pen_map {
+	top: 13px;
+	left: 65px;
 }
 
-.arachnid_nest {
-	top: -30px;
-	left: 110px;
-
-	&-red {
-		display: block;
-	}
+#port_map {
+	top: 215px;
+	left: 330px;
 }
 
-.core {
-	top: -30px;
-	left: 110px;
-
-	&-red {
-		display: block;
-	}
+#arachnid_nest_map {
+	top: 70px;
+	left: 170px;
 }
 
-.lava_lake {
-	top: -30px;
-	left: 110px;
-
-	&-red {
-		display: block;
-	}
+#core_map {
+	top: 18px;
+	left: 255px;
 }
 
-.reef {
-	top: -30px;
-	left: 110px;
-
-	&-red {
-		display: block;
-	}
+#lava_lake_map {
+	top: 5px;
+	left: 280px;
 }
 
-.malformation {
-	top: -30px;
-	left: 110px;
-
-	&-yellow {
-		display: block;
-	}
+#reef_map {
+	top: 20px;
+	left: 380px;
 }
 
-.shipyard {
-	top: -30px;
-	left: 110px;
-
-	&-yellow {
-		display: block;
-	}
+#malformation_map {
+	top: 133px;
+	left: 297px;
 }
 
-.thicket {
-	top: -30px;
-	left: 110px;
+#shipyard_map {
+	top: 195px;
+	left: 380px;
+}
 
-	&-red {
-		display: block;
-	}
+#thicket_map {
+	top: 100px;
+	left: 380px;
+}
+
+#olmecs_sanctum_map {
+	top: 280px;
+	left: 290px;
 }
