--- a/src/components/Map/lex_proxima/proxima.scss
+++ b/src/components/Map/lex_proxima/proxima.scss
@@ -4,7 +4,7 @@
 }
 
 #ashen_wood_map {
-	top: 470px;
+	top: 450px;
 	left: 310px;
 }
 
@@ -131,4 +131,9 @@
 #doryanis_machinarium_map {
 	top: 85px;
 	left: 155px;
+}
+
+#hallowed_ground_map {
+	top: 510px;
+	left: 360px;
 }
