--- a/src/components/Map/new_vastir/vastir.scss
+++ b/src/components/Map/new_vastir/vastir.scss
@@ -1,106 +1,69 @@
-.basilica {
-	top: 20px;
-	left: 0px;
-
-	&-white {
-		display: block;
-	}
-}
-
-.caldera {
-	top: 80px;
+#basilica_map {
+	top: 220px;
 	left: -50px;
-
-	&-white {
-		display: block;
-	}
 }
 
-.courtyard {
-	top: 255px;
-	left: 20px;
-	&-white {
-		display: block;
-	}
+#caldera_map {
+	top: 365px;
+	left: 70px;
 }
 
-.desert_spring {
-	top: 190px;
-	left: -105px;
-
-	&-white {
-		display: block;
-	}
+#courtyard_map {
+	top: 310px;
+	left: -20px;
 }
 
-.ghetto {
-	top: 250px;
-	left: -25px;
-
-	&-white {
-		display: block;
-	}
+#desert_spring_map {
+	top: 400px;
+	left: 140px;
 }
 
-.moon_temple {
-	top: 255px;
-	left: 188px;
-
-	&-white {
-		display: block;
-	}
+#ghetto_map {
+	top: 335px;
+	left: 225px;
 }
 
-.sunken_city {
-	top: 80px;
-	left: 23px;
-
-	&-white {
-		display: block;
-	}
+#moon_temple_map {
+	top: 400px;
+	left: 240px;
 }
 
-.shrine {
-	top: 80px;
-	left: 23px;
-
-	&-yellow {
-		display: block;
-	}
+#sunken_city_map {
+	top: 420px;
+	left: 310px;
 }
 
-.dungeon {
-	top: 80px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#the_twilight_temple_map {
+	top: 330px;
+	left: 140px;
 }
 
-.alleyways {
-	top: 80px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#the_vinktar_square_map {
+	top: 280px;
+	left: 60px;
 }
 
-.cage {
-	top: 180px;
-	left: 23px;
-
-	&-red {
-		display: block;
-	}
+#shrine_map {
+	top: 365px;
+	left: -20px;
 }
 
-.acid_caverns {
-	top: 180px;
-	left: 23px;
+#dungeon_map {
+	top: 310px;
+	left: -70px;
+}
 
-	&-red {
-		display: block;
-	}
+#alleyways_map {
+	top: 415px;
+	left: -60px;
+}
+
+#cage_map {
+	top: 330px;
+	left: -60px;
+}
+
+#acid_caverns_map {
+	top: 430px;
+	left: 90px;
 }
