--- a/src/components/Map/lex_proxima/proxima.scss
+++ b/src/components/Map/lex_proxima/proxima.scss
@@ -1,139 +1,289 @@
 #arsenal_map {
 	top: 167px;
 	left: 273px;
+
+	&_awakened {
+		top: 130px;
+		left: 300px;
+	}
 }
 
 #ashen_wood_map {
 	top: 450px;
 	left: 310px;
+
+	&_awakened {
+		top: 470px;
+		left: 317px;
+	}
 }
 
 #bazaar_map {
 	top: 55px;
 	left: -25px;
+
+	&_awakened {
+		top: 90px;
+		left: -30px;
+	}
 }
 
 #cemetery_map {
 	top: 580px;
 	left: 360px;
+
+	&_awakened {
+		top: 590px;
+		left: 355px;
+	}
 }
 
 #coral_ruins_map {
 	top: 560px;
 	left: 290px;
+
+	&_awakened {
+		top: 575px;
+		left: 300px;
+	}
 }
 
 #crystal_ore_map {
 	top: 330px;
 	left: 380px;
+
+	&_awakened {
+		top: 280px;
+		left: 405px;
+	}
 }
 
 #dunes_map {
 	top: 207px;
 	left: 348px;
+
+	&_awakened {
+		top: 205px;
+		left: 345px;
+	}
 }
 
 #fields_map {
 	top: 190px;
 	left: 110px;
+
+	&_awakened {
+		top: 250px;
+		left: 70px;
+	}
 }
 
 #glacier_map {
 	top: 275px;
 	left: 110px;
+
+	&_awakened {
+		top: 310px;
+		left: 115px;
+	}
 }
 
 #haunted_mansion_map {
 	top: 460px;
 	left: 210px;
+
+	&_awakened {
+		top: 460px;
+		left: 210px;
+	}
 }
 
 #jungle_valley_map {
 	top: 140px;
 	left: -12px;
+
+	&_awakened {
+		top: 190px;
+		left: -20px;
+	}
 }
 
 #mausoleum_map {
 	top: 360px;
 	left: 245px;
+
+	&_awakened {
+		top: 370px;
+		left: 225px;
+	}
 }
 
 #plateau_map {
 	top: 440px;
 	left: 420px;
+
+	&_awakened {
+		top: 430px;
+		left: 415px;
+	}
 }
 
 #terrace_map {
 	top: 85px;
 	left: 195px;
+
+	&_awakened {
+		top: 95px;
+		left: 240px;
+	}
 }
 
 #underground_sea_map {
 	top: 240px;
 	left: 245px;
+
+	&_awakened {
+		top: 265px;
+		left: 285px;
+	}
 }
 
 #volcano_map {
 	top: 330px;
 	left: 490px;
+
+	&_awakened {
+		top: 390px;
+		left: 480px;
+	}
 }
 
 #underground_river_map {
 	top: 75px;
 	left: 55px;
+
+	&_awakened {
+		top: 75px;
+		left: 45px;
+	}
 }
 
 #tower_map {
 	top: 360px;
 	left: 430px;
+
+	&_awakened {
+		top: 365px;
+		left: 405px;
+	}
 }
 
 #sepulchre_map {
 	top: 110px;
 	left: 85px;
+
+	&_awakened {
+		top: 200px;
+		left: 115px;
+	}
 }
 
 #arid_lake_map {
 	top: 235px;
 	left: 200px;
+
+	&_awakened {
+		top: 315px;
+		left: 205px;
+	}
 }
 
 #maze_map {
 	top: 200px;
 	left: 190px;
+
+	&_awakened {
+		top: 180px;
+		left: 175px;
+	}
 }
 
 #mineral_pools_map {
 	top: 355px;
 	left: 370px;
+
+	&_awakened {
+		top: 350px;
+		left: 315px;
+	}
 }
 
 #siege_map {
 	top: 60px;
 	left: 135px;
+
+	&_awakened {
+		top: 40px;
+		left: 145px;
+	}
 }
 
 #laboratory_map {
 	top: 255px;
 	left: 155px;
+
+	&_awakened {
+		top: 260px;
+		left: 155px;
+	}
 }
 
 #caer_blaidd_map {
 	top: 135px;
 	left: 33px;
+
+	&_awakened {
+		top: 170px;
+		left: 50px;
+	}
 }
 
 #pillars_of_arun_map {
 	top: 260px;
 	left: 330px;
+
+	&_awakened {
+		top: 330px;
+		left: 485px;
+	}
 }
 
 #doryanis_machinarium_map {
 	top: 85px;
 	left: 155px;
+
+	&_awakened {
+		top: 110px;
+		left: 145px;
+	}
 }
 
 #hallowed_ground_map {
 	top: 510px;
 	left: 360px;
+
+	&_awakened {
+		top: 525px;
+		left: 365px;
+	}
+}
+
+#obas_cursed_trove_map {
+	top: 300px;
+	left: 240px;
+
+	&_awakened {
+		top: 195px;
+		left: 260px;
+	}
 }
