--- a/src/components/Map/glennach_cairns/glennach.scss
+++ b/src/components/Map/glennach_cairns/glennach.scss
@@ -1,114 +1,229 @@
 #arena_map {
 	top: 75px;
 	left: -10px;
+
+	&_awakened {
+		top: 63px;
+		left: 0px;
+	}
 }
 
 #beach_map {
 	top: 395px;
 	left: 400px;
+
+	&_awakened {
+		top: 417px;
+		left: 400px;
+	}
 }
 
 #colonnade_map {
 	top: 410px;
 	left: 350px;
+
+	&_awakened {
+		top: 415px;
+		left: 345px;
+	}
 }
 
 #coves_map {
 	top: 390px;
 	left: 460px;
+
+	&_awakened {
+		top: 410px;
+		left: 450px;
+	}
 }
 
 #desert_map {
 	top: 230px;
 	left: 430px;
+
+	&_awakened {
+		top: 243px;
+		left: 432px;
+	}
 }
 
 #infested_valley_map {
 	top: 165px;
 	left: 210px;
+
+	&_awakened {
+		top: 135px;
+		left: 270px;
+	}
 }
 
 #ivory_temple_map {
 	top: 195px;
 	left: 325px;
+
+	&_awakened {
+		top: 190px;
+		left: 370px;
+	}
 }
 
 #lava_chamber_map {
 	top: 125px;
 	left: 110px;
+
+	&_awakened {
+		top: 120px;
+		left: 40px;
+	}
 }
 
 #orchard_map {
 	top: 352px;
 	left: 136px;
+
+	&_awakened {
+		top: 355px;
+		left: 135px;
+	}
 }
 
 #park_map {
 	top: 175px;
 	left: -5px;
+
+	&_awakened {
+		top: 170px;
+		left: 0px;
+	}
 }
 
 #racecourse_map {
 	top: 405px;
 	left: 260px;
+
+	&_awakened {
+		top: 420px;
+		left: 260px;
+	}
 }
 
 #shore_map {
 	top: 265px;
 	left: 100px;
+
+	&_awakened {
+		top: 257px;
+		left: 55px;
+	}
 }
 
 #sulphur_vents_map {
 	top: 330px;
 	left: 430px;
+
+	&_awakened {
+		top: 300px;
+		left: 430px;
+	}
 }
 
 #vault_map {
 	top: 250px;
 	left: 200px;
+
+	&_awakened {
+		top: 360px;
+		left: 245px;
+	}
 }
 
 #mao_kun_map {
 	top: 210px;
 	left: 95px;
+
+	&_awakened {
+		top: 195px;
+		left: 50px;
+	}
 }
 
 #carcass_map {
 	top: 258px;
 	left: 170px;
+
+	&_awakened {
+		top: 260px;
+		left: 170px;
+	}
 }
 
 #cells_map {
 	top: 127px;
 	left: 165px;
+
+	&_awakened {
+		top: 130px;
+		left: 170px;
+	}
 }
 
 #flooded_mine_map {
 	top: 325px;
 	left: 330px;
+
+	&_awakened {
+		top: 350px;
+		left: 325px;
+	}
 }
 
 #geode_map {
 	top: 210px;
 	left: 150px;
+
+	&_awakened {
+		top: 185px;
+		left: 170px;
+	}
 }
 
 #marshes_map {
 	top: 265px;
 	left: 295px;
+
+	&_awakened {
+		top: 260px;
+		left: 350px;
+	}
 }
 
 #pit_map {
 	top: 190px;
 	left: 260px;
+
+	&_awakened {
+		top: 190px;
+		left: 285px;
+	}
 }
 
 #plaza_map {
 	top: 232px;
 	left: 187px;
+
+	&_awakened {
+		top: 270px;
+		left: 265px;
+	}
 }
 
 #spider_lair_map {
 	top: 320px;
 	left: 408px;
+
+	&_awakened {
+		top: 360px;
+		left: 410px;
+	}
 }
