--- a/src/components/Atlas/Atlas.scss
+++ b/src/components/Atlas/Atlas.scss
@@ -63,7 +63,7 @@ $height: $width * 0.5625;
 }
 
 .toggle_atlas_button {
-	width: 120px;
+	width: 139px;
 	height: 60px;
 	top: 80px;
 	left: 900px;
@@ -78,6 +78,7 @@ $height: $width * 0.5625;
 	margin-right: 5px;
 	border-radius: 2px;
 	color: white;
+	padding: 5px;
 }
 
 .active {
